# jtools

./: README.md  pyproject.toml  requirements.txt
jtools/: __init__.py  exporter.py  manager.py
tests/: test_decorators.py  test_mailing.py  test_manager.py  test_notifier.py  test_re.py  test_utils.py
