[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsf-jtools"
version = "1.0.2"
authors = [
    {name = "DSFish", email = "liumingshuo1017@gmail.com"},
]
description = "A simple tools module"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas==1.5.3",
    "numpy==1.22.4",
    "pymongo==4.11.2",
    "loguru==0.7.2",
]

[project.urls]
Homepage = "https://github.com/DataScienceFish/jtools"

[tool.setuptools.packages.find]
where = ["."]
include = ["jtools*"]

[tool.setuptools.package-data]
jtools = ["data/*.csv"]
